--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -3,6 +3,11 @@
   margin: 0px;
 }
 
+a:link, a:visited {
+  text-decoration: none;
+  color: #2f2f2f;
+}
+
 body {
   background-color: #e7e6e6;
 }
@@ -16,10 +21,14 @@ main {
 
 .error-notification {
   background-color: #e05a65;
-}
 
-.navigation-bar {
-  background-color: orange;
+  p {
+    color: white;
+    text-align: center;
+    padding: 3px 0 4px;
+    font-size: 18px;
+    margin: 0x;
+  }
 }
 
 footer {
