--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,5 +1,5 @@
 .navigation-bar {
-  background: url("/public/images/main-nav-bg.png") no-repeat center center;
+  background: url("../images/main-nav-bg.png") no-repeat center center;
   height: 65px;
   width: 104%;
   margin: 2px 0 0 -14px;
