--- a/public.ori/styles/header.scss
+++ b/public.ori/styles/header.scss
@@ -38,7 +38,7 @@
         border-radius: 4px;
 
         .header-cart {
-          background: url('/public/images/cart-icon.png') no-repeat left center;
+          background: url('/images/cart-icon.png') no-repeat left center;
           padding: 0px 0px 0px 40px;
         }
       }
