--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,6 +1,6 @@
 .navigation-bar {
-  background: url("../images/main-nav-bg.png") no-repeat center center;
+  background: url("/images/main-nav-bg.png") no-repeat center center;
   height: 65px;
   width: 104%;
-  margin: 2px 0 0 -14px;
-}
+  margin: 2px 0 0 -28px;
+} 
