--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -101,19 +101,12 @@ header .header-details .cart-box .header-cart {
   margin: 2px 0 0 -28px;
 }
 
-.container {
-  display: flex;
-}
-.container .main-content {
-  background-color: gray;
-  width: 80%;
-}
-.container .sidebar {
+.sidebar {
   width: 20%;
   display: flex;
   flex-direction: column;
 }
-.container .sidebar .categories-sidebar .aside-title {
+.sidebar .categories-sidebar .aside-title {
   color: #fff;
   font-size: 22px;
   font-weight: 200;
@@ -124,51 +117,96 @@ header .header-details .cart-box .header-cart {
   line-height: 42px;
   padding: 0 0 0 30px;
 }
-.container .sidebar .categories-sidebar .aside-menu li {
+.sidebar .categories-sidebar .aside-menu li {
   border-bottom: 1px solid #ddd;
   font-size: 17px;
   position: relative;
 }
-.container .sidebar .categories-sidebar .aside-menu li a {
+.sidebar .categories-sidebar .aside-menu li a {
   background: url("/images/list-point.png") no-repeat 10px 6px;
   padding: 0px 12px 8px 25px;
   display: inline-block;
 }
-.container .sidebar .categories-sidebar ul.aside-menu > li > a.aside-active, .container .sidebar .categories-sidebar ul.aside-sub-menu li a.aside-active {
+.sidebar .categories-sidebar ul.aside-menu > li > a.aside-active, .sidebar .categories-sidebar ul.aside-sub-menu li a.aside-active {
   color: #d41b29;
 }
-.container .sidebar .categories-sidebar .aside-sub-menu {
+.sidebar .categories-sidebar .aside-sub-menu {
   margin: 0px 0px 0px 30px;
 }
-.container .sidebar .discounts-sidebar {
+.sidebar .discounts-sidebar {
   background-color: darkgreen;
 }
-.container .sidebar .contact-sidebar {
+.sidebar .contact-sidebar {
   background-color: lightpink;
 }
-.container .sidebar .information-sidebar {
+.sidebar .information-sidebar {
   background-color: limegreen;
 }
-.container .main-slider {
-  margin: 20px 30px 0px 30px;
+
+.main-slider {
   background-color: aqua;
 }
-.container .slider-btn-container {
+
+.slider-btn-container {
   text-align: center;
 }
-.container .slider-btns li {
+
+.slider-btns li {
   display: inline;
   text-indent: -9999px;
   margin: 2px;
 }
-.container .slider-btns li a {
+.slider-btns li a {
   display: inline-block;
   height: 15px;
   width: 15px;
   background: url("/images/slide-btn.png") no-repeat center center;
 }
-.container .slider-btns li a.active-slide, .container .slider-btns li .slider-btns li a:hover {
+.slider-btns li a.active-slide, .slider-btns li .slider-btns li a:hover {
   background: url("/images/slide-btn-active.png") no-repeat center center;
+}
+
+h2.main-title {
+  color: #2b2b2b;
+  font-size: 22px;
+  font-weight: 200;
+  margin-bottom: 10px;
+}
+
+.main-products-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.main-product {
+  width: 31%;
+  margin: 0 2% 40px 0;
+}
+
+.main-product-title {
+  font-size: 15px;
+}
+
+.main-product-description {
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.main-product-image {
+  width: 100%;
+}
+
+.main-content {
+  background-color: gray;
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
+.container {
+  display: flex;
 }
 
 footer {
