--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,5 +1,6 @@
 @import 'sidebar/sidebar';
 @import 'maincontent/maincontent';
+@import 'authentication/authentication';
 
 .container {
   display: flex;
