--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -265,6 +265,23 @@ h2.main-title {
   margin-top: 20px;
 }
 
+.authentication {
+  background-color: lightgreen;
+  width: 100%;
+  text-align: center;
+  margin: 40px 100px;
+}
+.authentication .authentication-main-title {
+  color: #2b2b2b;
+  font-size: 22px;
+  font-weight: 200;
+  text-align: left;
+  margin-bottom: 20px;
+}
+.authentication .authentication-forms {
+  display: flex;
+}
+
 .container {
   display: flex;
 }
