--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,8 +1,16 @@
 @import 'sidebar/sidebar';
 @import 'maincontent/maincontent';
 @import 'authentication/authentication';
+@import 'productcontent/productcontent';
 
 .container {
   display: flex;
+}
+
+.main-content {
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
 }
 
