--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -257,13 +257,6 @@ h2.main-title {
   width: 100%;
 }
 
-.main-content {
-  width: 80%;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 20px;
-}
-
 .authentication {
   background-color: lightgreen;
   width: 100%;
@@ -281,8 +274,134 @@ h2.main-title {
   display: flex;
 }
 
+.product-detail {
+  width: 31%;
+  margin: 0 2% 40px 0;
+}
+
+.product-image-col {
+  width: 48%;
+  float: left;
+  margin: 0 0 80px 0;
+}
+
+.product-image-container {
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+.product-image-container a:link img {
+  width: 100% !important;
+  height: auto !important;
+}
+
+a.enlarge-product-btn {
+  color: #2b2b2b;
+  display: inline-block;
+  padding: 10px 46px 10px 14px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: url("/images/enlarge-icon.png") no-repeat 140px center #ddd;
+  margin: 0 0 20px;
+}
+
+.product-thumbnail-container {
+  text-align: center;
+  margin: 14px 0;
+}
+
+.product-details-col {
+  width: 46%;
+  float: left;
+  margin: 0 0 80px 4%;
+}
+
+.product-details-col h2 {
+  font-size: 22px;
+  font-weight: 600;
+  margin: 0 0 20px;
+}
+
+.product-info {
+  text-align: center;
+  margin: 0 0 20px;
+}
+
+.product-content-details ul {
+  padding: 0 0 20px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.product-content-details ul li {
+  list-style-type: disc;
+  margin: 0 0 0 18px;
+}
+
+.product-content-details ul li.quantity {
+  list-style-type: none;
+  margin: 0;
+}
+
+li.quantity input {
+  width: 40px;
+  padding: 5px 5px;
+  margin: 10px 12px 10px 0;
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+.quantity .product-price {
+  font-weight: 600;
+  font-size: 22px;
+  display: inline-block;
+}
+
+a.add-to-basket {
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 6px 14px;
+  font-weight: 500;
+  background: #0c6be8;
+  float: right;
+  display: inline-block;
+  margin: 6px 0 0;
+}
+
+.product-discount-text {
+  color: #d41b29;
+}
+
+.product-info ul.info-list li:first-child {
+  float: left;
+}
+
+.product-info ul.info-list li {
+  background: #2b2b2b;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  font-size: 15px;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
+  display: inline-block;
+  padding: 10px 0;
+  width: 100px;
+  text-transform: uppercase;
+}
+
 .container {
   display: flex;
+}
+
+.main-content {
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
 }
 
 footer {
