A lot of things !

--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -1,7 +1,7 @@
 @import 'sidebar/sidebar';
 @import 'maincontent/maincontent';
 @import 'authentication/authentication';
-@import 'productcontent/productcontent';
+@import 'productcontent/product';
 
 .container {
   display: flex;
