--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -254,6 +254,14 @@ button.search-btn {
   background: url("/images/email-icon.png") no-repeat left center;
 }
 
+.css-19gs9ir-wrapper {
+  position: relative;
+  height: 21px;
+  text-align: center;
+  margin-left: 101px;
+  margin-top: 20px;
+}
+
 .slider-btn-container {
   text-align: center;
 }
