--- a/src/components/container/sidebar/sidebar.scss
+++ b/src/components/container/sidebar/sidebar.scss
@@ -40,6 +40,7 @@
     }
   }
 
+
   // Discounts
 
   .discounts-sidebar {
@@ -118,9 +119,12 @@
     }
 
   }
-
 }
 
-
-
-
+.css-19gs9ir-wrapper {
+    position: relative;
+    height: 21px;
+    text-align: center;
+    margin-left: 101px;
+    margin-top: 20px;
+}
