Refactor de folders

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -53,5 +53,16 @@ footer {
   background-color: yellow;
 }
 
+.container {
+  display: flex;
+}
+
+.main-content {
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+
 /*# sourceMappingURL=styles.css.map */
 
