--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -184,21 +184,20 @@ li.main-search input[type=text] {
   border: none;
   margin: 0;
   padding: 7px;
-  height: 22px;
+  height: 24px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
   width: 446px;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 button.search-btn {
   border: none;
   background: url("/images/search-icon.png") no-repeat center center;
   text-indent: -9999px;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   display: inline-block;
-  margin: 7px;
 }
 
 footer.main-footer {
@@ -303,6 +302,10 @@ input[type=checkbox], input[type=radio] {
   font-weight: 200;
 }
 
+.footer-error-message {
+  color: red;
+}
+
 .sidebar {
   width: 20%;
   display: flex;
@@ -399,6 +402,12 @@ input[type=checkbox], input[type=radio] {
   margin-top: 20px;
 }
 
+.sidebar-error-message {
+  color: red;
+  margin-left: 40px;
+  margin-top: 6px;
+}
+
 .authentication {
   background-color: lightgreen;
   width: 100%;
@@ -440,6 +449,7 @@ h2.main-title {
   font-size: 22px;
   font-weight: 200;
   margin-bottom: 10px;
+  font-size: 30px;
 }
 
 .main-products-list {
@@ -475,6 +485,14 @@ h2.main-title {
 .product-prices p span.price-con {
   font-weight: 600;
   font-size: 13px;
+}
+
+.main-products-error-message {
+  color: red;
+  text-align: center;
+  width: 100%;
+  margin-top: 100px;
+  font-size: 30px;
 }
 
 .product-detail {
