--- a/src/components/maincontent/mainproducts/mainproducts.scss
+++ b/src/components/maincontent/mainproducts/mainproducts.scss
@@ -3,6 +3,7 @@ h2.main-title {
   font-size: 22px;
   font-weight: 200;
   margin-bottom: 10px;
+  font-size: 30px;
 } 
 
 .main-products-list {
@@ -39,4 +40,12 @@ h2.main-title {
 .product-prices p span.price-con {
   font-weight: 600;
   font-size: 13px;
+}
+
+.main-products-error-message {
+  color: red;
+  text-align: center;
+  width: 100%;
+  margin-top: 100px;
+  font-size: 30px;  
 }
