--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -128,3 +128,9 @@
     margin-left: 101px;
     margin-top: 20px;
 }
+
+.sidebar-error-message {
+  color: red;
+  margin-left: 40px;
+  margin-top: 6px;
+}
