--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,5 +64,18 @@ footer {
   margin-top: 20px;
 }
 
+.form-btn {
+  background: #0c6be8;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 10px 14px;
+  font-weight: 500;
+  float: right;
+}
+
 /*# sourceMappingURL=styles.css.map */
 
