--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,6 +63,19 @@ footer {
   margin-top: 20px;
 }
 
+.form-btn {
+  background: #0c6be8;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 12px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 10px 14px;
+  font-weight: 500;
+  float: right;
+}
+
 /*# sourceMappingURL=styles.css.map */
 header {
   height: 163px;
@@ -409,7 +422,6 @@ input[type=checkbox], input[type=radio] {
 }
 
 .authentication {
-  background-color: lightgreen;
   width: 100%;
   text-align: center;
   margin: 40px 100px;
@@ -423,6 +435,72 @@ input[type=checkbox], input[type=radio] {
 }
 .authentication .authentication-forms {
   display: flex;
+  justify-content: space-around;
+}
+.authentication .authentication-forms-container {
+  width: 36%;
+  float: left;
+  border: 1px solid #d2d2d2;
+  -webkit-border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px 0 0;
+  padding: 0 0 16px;
+  min-height: 236px;
+  margin: 0 0 40px;
+}
+.authentication .authentication-forms-container h3 {
+  background: #000;
+  color: #fff;
+  margin: 0;
+  padding: 10px 16px;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 400;
+  -webkit-border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px 0 0;
+}
+.authentication .authentication-forms-container p {
+  font-size: 13px;
+  padding: 16px;
+  margin: 0;
+  text-align: left;
+}
+.authentication .authentication-forms-container form {
+  font-size: 13px;
+  padding: 16px;
+  margin: 0;
+}
+.authentication .authentication-forms-container label {
+  display: block;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin: 0 0 5px;
+  text-align: left;
+}
+.authentication .authentication-forms-container input[type=text], .authentication .authentication-forms-container input[type=email], .authentication .authentication-forms-container input[type=password], .authentication .authentication-forms-container textarea {
+  display: block;
+  border: 1px solid #959595;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 10px !important;
+  -webkit-box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  width: 94%;
+  margin: 0 0 14px;
+}
+.authentication .hideShowPassword-toggle {
+  background: url("/images/wink.svg") no-repeat 0 center;
+  cursor: pointer;
+  height: 100%;
+  overflow: hidden;
+  text-indent: -9999em;
+  width: 44px;
+  border: none;
+}
+.authentication .hideShowPassword-wrapper {
+  position: relative;
+  display: block;
+  margin: 0px 0px 14px;
+  width: 349px;
 }
 
 .slider-btn-container {
