--- a/src/components/productcontent/product.scss
+++ b/src/components/productcontent/product.scss
@@ -38,13 +38,26 @@ a.enlarge-product-btn {
 .product-details-col {
   width: 46%;
   float: left;
-  margin: 0 0 80px 4%;
+	margin: 0 0 80px 4%;
+	display: flex;
+	flex-flow: column;
 }
 
 .product-details-col h2 {
   font-size: 22px;
   font-weight: 600;
   margin: 0 0 20px;
+}
+
+.product-details-col-name {
+	font-size: 22px;
+	font-weight: 600;
+	margin: 0 0 20px;
+}
+
+.product-details-col-description {
+	font-size: 18px;
+	margin: 0 0 10px;
 }
 
 .product-details-col h2 {
