--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -634,6 +634,11 @@ a.enlarge-product-btn {
   margin: 0 0 10px;
 }
 
+.product-details-col-packaging {
+  font-size: 18px;
+  margin: 0 0 10px;
+}
+
 .product-details-col h2 {
   font-size: 22px;
   font-weight: 600;
@@ -699,6 +704,20 @@ a.add-to-basket {
   background: #0c6be8;
   display: inline-block;
   margin: 6px 0 0;
+}
+
+.save-product {
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  padding: 6px 14px;
+  font-weight: 500;
+  background: #0c6be8;
+  display: inline-block;
+  margin: 6px 0 0;
+  width: 164px;
 }
 
 .product-discount-text {
